--- a/CSS的学习/小米官网仿写/css/mi.less
+++ b/CSS的学习/小米官网仿写/css/mi.less
@@ -5,6 +5,9 @@
 .header{
     width: 100%;
     height: 40px;
+}
+.site-topbar{
+    min-width: 1226px;
     background-color: #333;
 }
 .wrap{
@@ -20,14 +23,14 @@
         align-items: center;
         li{
             list-style: none;
-            a{
+            >a{
                 color: #b0b0b0;
                 line-height: 40px;
                 display: inline-block;
                 text-decoration:none;
-            }
-            a:hover{
-                color: #fff;
+                &:hover{
+                    color: #fff;
+                }
             }
             span{
                 margin: 0 .3em;
@@ -36,6 +39,55 @@
         }
     }
 
+}
+.wrap-left{
+    .download-app{
+        position: relative;
+        display: inline-block;
+        .triangle{
+            width: 0;
+            height: 0;
+            border-right: 7px solid transparent;
+            border-bottom: 7px solid #fff;
+            border-left: 7px solid transparent;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+        }
+        .download-QR{
+            position: absolute;
+            width: 124px;
+            height: 0px;
+            top: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #fff;
+            box-shadow: 0 1px 5px #aaa;
+            display: flex;
+            flex-direction: column;
+            color: #333;
+            font-size: 14px;
+            overflow: hidden;
+            transition: all .3s;
+            img{
+                width: 90px;
+                height: 90px;
+            }
+        }
+        &:hover{
+            .download-QR{
+                height: 148px;
+            }
+            .triangle{
+                display: block;
+            }
+        }
+    }
 }
 
 .wrap-right{
