--- a/CSS的学习/小米官网仿写/css/font_vu37ww7nbpa/iconfont.css
+++ b/CSS的学习/小米官网仿写/css/font_vu37ww7nbpa/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1646836815714') format('truetype');
+  src: url('iconfont.ttf?t=1648138014701') format('truetype');
 }
 
 .iconfont {
@@ -13,6 +13,10 @@
 
 .icon-shumashouji:before {
   content: "\3457";
+}
+
+.icon-xiangyoujiantou:before {
+  content: "\e65f";
 }
 
 .icon-weixin:before {
@@ -41,5 +45,8 @@
 
 .icon-fangdajing:before {
   content: "\e687";
+}
+.icon-fanhuijiantou:before {
+  content: "\e8b5";
 }
 
